delete functionality, 1st steps of limit implementation

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -34,6 +34,12 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
+                        <select name="limit">
+                            <option value=10>10</option>
+                            <option value=10>20</option>
+                            <option value=10>30</option>
+                            <option value=10>All</option>
+                        </select>
                     </ul>
                 </div>
             </div>
