--- a/blog/templates/entry.html
+++ b/blog/templates/entry.html
@@ -2,19 +2,17 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% for entry in entries %}
 {{ macros.render_entry(entry) }}
-{% endfor %}
 
 <ul class="pager">
   {% if has_prev %}
   <li class="previous">
-    <a href="{{url_for('entries', page=page + 1) }}">&larr; Older</a>
+    <a href="{{url_for('entry', id=id - 1) }}">&larr; Older</a>
   </li>
   {% endif %}
   {% if has_next %}
   <li class="next">
-    <a href="{{ url_for('entries', page=page - 1) }}">&rarr; Next</a>
+    <a href="{{ url_for('entry', id=id + 1) }}">&rarr; Next</a>
   </li>
   {% endif %}
 </ul>
