--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -34,12 +34,13 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <select name="limit">
-                            <option value=10>10</option>
-                            <option value=10>20</option>
-                            <option value=10>30</option>
-                            <option value=10>All</option>
-                        </select>
+                        <form>
+                            <select name="limit" onchange="this.form.submit()">
+                                <option>10</option>
+                                <option selected>20</option>
+                                <option>30</option>
+                            </select>
+                        </form>
                     </ul>
                 </div>
             </div>
