--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,10 +31,16 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful</a>
+          {{ current_user.name }}
+          {% if current_user.name %}
+            <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
+          {% else %}
+            <a class="navbar-brand" href="{{ url_for('login_get') }}">Login</a>
+          {% endif %}
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <form>
+            <form class='navbar-form'>
               <select name="limit" onchange="this.form.submit()">
                 <option>10</option>
                 <option selected>20</option>
