--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,9 +31,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful</a>
-          {{ current_user.name }}
           {% if current_user.name %}
-            <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
+            <a class="navbar-brand" href="{{ url_for('logout') }}">Logout, {{ current_user.name }}</a>
           {% else %}
             <a class="navbar-brand" href="{{ url_for('login_get') }}">Login</a>
           {% endif %}
